operator/pkg/gateway-api/testdata/gateway/httproute-redirect-port-and-scheme/output/cec-same-namespace.yaml
metadata:
  creationTimestamp: null
  annotations:
    cec.cilium.io/use-original-source-address: "false"
  labels:
    gateway.networking.k8s.io/gateway-name: same-namespace
  name: cilium-gateway-same-namespace
  namespace: gateway-conformance-infra
  ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1
      controller: true
      kind: Gateway
      name: same-namespace
      uid: ""
  resourceVersion: "1"
spec:
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      filterChains:
        - filterChainMatch:
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                commonHttpProtocolOptions:
                  maxStreamDuration: 0s
                httpFilters:
                  - name: envoy.filters.http.grpc_web
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.grpc_stats
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      emitFilterState: true
                      enableUpstreamStats: true
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                internalAddressConfig: {}
                rds:
                  routeConfigName: listener-insecure
                statPrefix: listener-insecure
                streamIdleTimeout: 300s
                upgradeConfigs:
                  - upgradeType: websocket
                useRemoteAddress: true
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: listener
      socketOptions:
        - description: Enable TCP keep-alive (default to enabled)
          intValue: "1"
          level: "1"
          name: "9"
        - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
          intValue: "10"
          level: "6"
          name: "4"
        - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
          intValue: "5"
          level: "6"
          name: "5"
        - description: TCP keep-alive probe max failures.
          intValue: "10"
          level: "6"
          name: "6"
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: listener-insecure
      virtualHosts:
        - domains:
            - "*"
          name: "*"
          routes:
            - match:
                pathSeparatedPrefix: /scheme-https-and-port-8443
                headers:
                - invertMatch: true
                  name: X-Forwarded-Proto
                  stringMatch:
                    exact: https
                    ignoreCase: true
              redirect:
                hostRedirect: example.org
                portRedirect: 8443
                schemeRedirect: https
            - match:
                pathSeparatedPrefix: /scheme-https-and-port-nil
                headers:
                - invertMatch: true
                  name: X-Forwarded-Proto
                  stringMatch:
                    exact: https
                    ignoreCase: true
              redirect:
                hostRedirect: example.org
                portRedirect: 443
                schemeRedirect: https
            - match:
                pathSeparatedPrefix: /scheme-https-and-port-443
                headers:
                - invertMatch: true
                  name: X-Forwarded-Proto
                  stringMatch:
                    exact: https
                    ignoreCase: true
              redirect:
                hostRedirect: example.org
                portRedirect: 443
                schemeRedirect: https
            - match:
                pathSeparatedPrefix: /scheme-nil-and-port-8080
              redirect:
                hostRedirect: example.org
                portRedirect: 8080
            - match:
                pathSeparatedPrefix: /scheme-nil-and-port-nil
              redirect:
                hostRedirect: example.org
                portRedirect: 80
            - match:
                pathSeparatedPrefix: /scheme-nil-and-port-80
              redirect:
                hostRedirect: example.org
                portRedirect: 80
  services:
    - listener: ""
      name: cilium-gateway-same-namespace
      namespace: gateway-conformance-infra
      ports:
        - 80
