operator/pkg/gateway-api/testdata/gateway/httproute-redirect-port-and-scheme/output/httproute-http-route-for-listener-on-port-443.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-for-listener-on-port-443
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace-with-https-listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-nil-and-port-nil
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: example.org
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-nil-and-port-443
      filters:
        - type: RequestRedirect
          requestRedirect:
            port: 443
            hostname: example.org
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-nil-and-port-8443
      filters:
        - type: RequestRedirect
          requestRedirect:
            port: 8443
            hostname: example.org
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-http-and-port-nil
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: "http"
            hostname: example.org
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-http-and-port-80
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: "http"
            port: 80
            hostname: example.org
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-http-and-port-8080
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: "http"
            port: 8080
            hostname: example.org
