operator/pkg/gateway-api/testdata/gateway/httproute-redirect-port-and-scheme/output/httproute-http-route-for-listener-on-port-8080.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-for-listener-on-port-8080
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace-with-http-listener-on-8080
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-nil-and-port-nil
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: example.org
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-nil-and-port-80
      filters:
        - type: RequestRedirect
          requestRedirect:
            port: 80
            hostname: example.org
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-https-and-port-nil
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: "https"
            hostname: example.org
